refactor: ajusta logs de serviços de mapa e subprocesso, renomeia métodos de autorização e simplifica testes de CDU
- Adiciona logs informativos em operações de MapaManutencaoService e SubprocessoAjusteMapaService
- Altera logs de info para debug em transições de subprocesso e workflow
- Renomeia método autorizar para buscarAutorizacoesUsuario no LoginFacade e ajusta chamadas e testes relacionados
- Atualiza TipoTransicao para suportar template de e-mail para unidade superior
- Refatora e simplifica testes automatizados de CDU-17, CDU-19, CDU-30, CDU-31, CDU-32, CDU-35 e CDU-36 para cenários agrupados e menos repetição
- Melhora helper de navegação para atividades em testes Playwright
- Ajusta roteiro de teste manual para maior clareza de etapas e resultados esperados